--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
+    "target": "ES2022",
     "module": "ESNext",
-    "target": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "esModuleInterop": true,
-    "strict": true,
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "outDir": "./dist",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmit": false  // ❗ Change this to false
   },
   "include": ["server.mts"]
 }
